k8s/platform.yaml
# Deployment: represents the app setup (an autoscaling app setup here)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: platform-deployment
  labels:
    app: platform
spec:
  replicas: 2
  selector:
    matchLabels:
      app: platform
  template:
    metadata:
      labels:
        app: platform
    spec:
      containers:
        - name: platform-container
          image: blsq/habari-platform:0.1.0
          ports:
            - containerPort: 8000
---
# Service: exposes the deployment
apiVersion: v1
kind: Service
metadata:
  name: platform-service
  labels:
    app: platform
spec:
  type: NodePort
  selector:
    app: platform
  ports:
    - port: 8000
