k8s/app.yaml
# Deployment: represents the app setup (an autoscaling app setup here)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  labels:
    component: app
spec:
  replicas: 3
  selector:
    matchLabels:
      component: app
  template:
    metadata:
      labels:
        component: app
    spec:
      nodeSelector:
        cloud.google.com/gke-nodepool: "${HEXA_NODE_POOL_SELECTOR}"
      containers:
        - name: app-container
          image: blsq/openhexa-app:"${HEXA_IMAGE_TAG}"
          ports:
            - containerPort: 8000
          command: [ "/code/docker-entrypoint.sh" ]
          args: [ "start" ]
        - name: app-cloudsql-proxy
          image: gcr.io/cloudsql-docker/gce-proxy:1.16
          command: [ "/cloud_sql_proxy", "--dir=/cloudsql",
                     "-instances=${HEXA_CLOUDSQL_CONNECTION_STRING}=tcp:5432",
                     "-credential_file=/secrets/cloudsql/credentials.json" ]
          volumeMounts:
            - name: app-cloudsql-oauth-credentials
              mountPath: /secrets/cloudsql
              readOnly: true
            - name: app-ssl-certs
              mountPath: /etc/ssl/certs
            - name: app-cloudsql
              mountPath: /cloudsql
      volumes:
        - name: app-cloudsql-oauth-credentials
          secret:
            secretName: cloudsql-oauth-credentials
        - name: app-ssl-certs
          hostPath:
            path: /etc/ssl/certs
        - name: app-cloudsql
          emptyDir: { }
---
# Service: exposes the deployment
apiVersion: v1
kind: Service
metadata:
  name: app-service
  labels:
    component: app
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8000
  selector:
    component: app
---
# Ingress
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    networking.gke.io/managed-certificates: app-certificate
spec:
  backend:
    serviceName: app-service
    servicePort: 80
